--- a/UsingUnneededAlpha.xcodeproj/xcshareddata/xcschemes/UsingUnneededAlpha.xcscheme
+++ b/UsingUnneededAlpha.xcodeproj/xcshareddata/xcschemes/UsingUnneededAlpha.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "5E475AF11675F7CB008C3699"
-               BuildableName = "StripAlphaIfNeeded"
+               BuildableName = "UsingUnneededAlpha"
                BlueprintName = "UsingUnneededAlpha"
                ReferencedContainer = "container:UsingUnneededAlpha.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "5E475AF11675F7CB008C3699"
-            BuildableName = "StripAlphaIfNeeded"
+            BuildableName = "UsingUnneededAlpha"
             BlueprintName = "UsingUnneededAlpha"
             ReferencedContainer = "container:UsingUnneededAlpha.xcodeproj">
          </BuildableReference>
@@ -52,7 +52,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "5E475AF11675F7CB008C3699"
-            BuildableName = "StripAlphaIfNeeded"
+            BuildableName = "UsingUnneededAlpha"
             BlueprintName = "UsingUnneededAlpha"
             ReferencedContainer = "container:UsingUnneededAlpha.xcodeproj">
          </BuildableReference>
@@ -70,7 +70,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "5E475AF11675F7CB008C3699"
-            BuildableName = "StripAlphaIfNeeded"
+            BuildableName = "UsingUnneededAlpha"
             BlueprintName = "UsingUnneededAlpha"
             ReferencedContainer = "container:UsingUnneededAlpha.xcodeproj">
          </BuildableReference>
